--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ provider:
     # BUCKET_NAME: sample-jovi-bucket
   # httpApi:
   #   cors: true
+  # ADD a KEYS for APIs
   httpApi:
     cors:
       allowedOrigins:
@@ -21,8 +22,9 @@ provider:
         - http://192.168.1.6:5173
         - https://react-crud-serverless-jsh.netlify.app
       allowedHeaders:
-        - Content-Type
-        - Authorization
+      - Content-Type
+      - Authorization
+      - x-api-key
       allowedMethods:
         - GET
         - POST
